more defensive guards based on static analysis #1159